Deleted mods shown in notification

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -421,6 +421,7 @@
 		<Content Remove="Assets\Games\Honkai\Images\Characters\xueyi.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\yanqing.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\yukong.webp" />
+		<Content Remove="Assets\Games\Honkai\weapons.json" />
 
 		<Content Remove="Assets\ModPanePlaceholder.webp" />
 	</ItemGroup>
