--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -357,14 +357,56 @@
 		<Content Remove="Assets\Games\Genshin\Images\Weapons\Weapon_Xiphos%27_Moonlight.png" />
 		<Content Remove="Assets\Games\Genshin\Languages\zh-cn\characters.json" />
 		<Content Remove="Assets\Games\Genshin\Languages\zh-cn\elements.json" />
+		<Content Remove="Assets\Games\Genshin\npcs.json" />
 		<Content Remove="Assets\Games\Genshin\objects.json" />
 		<Content Remove="Assets\Games\Genshin\regions.json" />
 		<Content Remove="Assets\Games\Genshin\weaponClasses.json" />
 		<Content Remove="Assets\Games\Genshin\weapons.json" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\argenti.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\arlan.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\asta.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\bailu.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\blade.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\bronya.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\Character_Others.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\Character_Weapons_Thumb.webp" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\clara.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\dangheng.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\DHIL.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\drratio.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\fuxuan.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\gepard.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\guinafen.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\hanya.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\herta.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\himeko.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\hook.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\jingliu.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\jingyuan.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\kafka.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\luka.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\luocha.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\lynx.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\march7.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\natasha.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\pela.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\qingque.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\ruanmei.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\sampo.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\seele.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\serval.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\silverwolf.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\sushang.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\tingyun.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\topaz.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\trailblazer.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\welt.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\xueyi.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\yanqing.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\yukong.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Npcs\Npc_Others.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Start_Game.webp" />
+		<Content Remove="Assets\Games\Honkai\npcs.json" />
 		<Content Remove="Assets\Games\Honkai\objects.json" />
 		<Content Remove="Assets\Games\Honkai\regions.json" />
 		<Content Remove="Assets\Games\Honkai\weaponClasses.json" />
@@ -430,7 +472,6 @@
 		<None Remove="Assets\Fonts\zh-cn2.ttf" />
 		<None Remove="Assets\Games\Genshin\Images\Start_Game.png" />
 		<None Remove="Assets\Games\Honkai\Images\Start_Game.png" />
-		<None Remove="Assets\Games\Honkai\npcs.json" />
 		<None Remove="Styles\FontTypes.xaml" />
 		<None Remove="Views\CharacterDetailsPage.xaml" />
 		<None Remove="Views\CharacterManagerPage.xaml" />
@@ -576,6 +617,9 @@
 		<Content Update="Assets\Fonts\zh-cn2.ttf">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+		<None Update="Assets\Games\Honkai\npcs.json">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<Content Update="Assets\WindowIcon.ico">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
@@ -620,5 +664,29 @@
 
 	<ItemGroup>
 		<PRIResource Remove="Views\ModInstaller\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Assets\Games\Honkai\characters.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Assets\Games\Honkai\elements.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Assets\Games\Honkai\game.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Assets\Games\Honkai\objects.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Assets\Games\Honkai\regions.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Assets\Games\Honkai\weaponClasses.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Assets\Games\Honkai\weapons.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 </Project>
