--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -176,8 +176,13 @@
 		<Content Remove="Assets\Games\Genshin\Images\Elements\Pyro.svg" />
 		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Clorinde.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Fatui.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Fungus.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Hilichurl.webp" />
 		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Katheryne.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Others.png" />
+		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Ruin Machines.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Sigewinne.webp" />
+		<Content Remove="Assets\Games\Genshin\Images\Npcs\Npc_Slimes.webp" />
 		<Content Remove="Assets\Games\Genshin\Images\Start_Game.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Weapons\Weapon_Akuoumaru.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Weapons\Weapon_Alley_Hunter.png" />
@@ -618,6 +623,21 @@
 		<Content Update="Assets\Fonts\zh-cn2.ttf">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+		<None Update="Assets\Games\Genshin\Images\Npcs\Npc_Slimes.webp">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Npcs\Npc_Clorinde.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Npcs\Npc_Fatui.webp">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Npcs\Npc_Katheryne.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="Assets\Games\Genshin\Images\Npcs\Npc_Others.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="Assets\Games\Honkai\npcs.json">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
