Added wrapper for EnqueueAsync()

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -536,6 +536,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\CommunityToolkitWrapper\CommunityToolkitWrapper.csproj" />
 		<ProjectReference Include="..\GIMI-ModManager.Core\GIMI-ModManager.Core.csproj" />
 	</ItemGroup>
 	<ItemGroup>
