--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -89,6 +89,7 @@
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Candace_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Charlotte_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Chevreuse_Thumb.png" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Chiori_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Chongyun_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Clorinde_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Collei_Thumb.png" />
@@ -384,13 +385,13 @@
 		<Content Remove="Assets\Games\Honkai\Images\Characters\Character_Others.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\Character_Weapons_Thumb.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\clara.png" />
-		<Content Remove="Assets\Games\Honkai\Images\Characters\dangheng.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\danheng.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\DHIL.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\drratio.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\fuxuan.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\gallagher.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\gepard.png" />
-		<Content Remove="Assets\Games\Honkai\Images\Characters\guinafen.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\guinaifen.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\hanya.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\herta.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\himeko.png" />
