chore: Added Chiori, hsr 2.1 characters, hsr character info, typo fixes (#134)
* added 2.1 characters, fixed typo

* Chiori and star rail character info

Added Chiori
Guinafen > Guinaifen
Dang Heng > Dan Heng
Converted gallagher picture from wbp to png
Fixed release date on characters
Fixed region on characters
Added Cosmic region
Added Punklorde region
Added Pteruges-V region

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -89,6 +89,7 @@
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Candace_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Charlotte_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Chevreuse_Thumb.png" />
+		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Chiori_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Chongyun_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Clorinde_Thumb.png" />
 		<Content Remove="Assets\Games\Genshin\Images\Characters\Character_Collei_Thumb.png" />
@@ -372,9 +373,11 @@
 		<Content Remove="Assets\Games\Genshin\regions.json" />
 		<Content Remove="Assets\Games\Genshin\weaponClasses.json" />
 		<Content Remove="Assets\Games\Genshin\weapons.json" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\acheron.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\argenti.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\arlan.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\asta.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\aventurine.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\bailu.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\blackswan.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\blade.png" />
@@ -382,12 +385,13 @@
 		<Content Remove="Assets\Games\Honkai\Images\Characters\Character_Others.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\Character_Weapons_Thumb.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\clara.png" />
-		<Content Remove="Assets\Games\Honkai\Images\Characters\dangheng.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\danheng.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\DHIL.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\drratio.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\fuxuan.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\gallagher.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\gepard.png" />
-		<Content Remove="Assets\Games\Honkai\Images\Characters\guinafen.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\guinaifen.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\hanya.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\herta.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\himeko.png" />
