--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -513,6 +513,7 @@
 		<None Remove="Views\EasterEggPage.xaml" />
 		<None Remove="Views\ErrorWindow.xaml" />
 		<None Remove="Views\ModInstallerPage.xaml" />
+		<None Remove="Views\ModSelector.xaml" />
 		<None Remove="Views\ModsOverviewPage.xaml" />
 		<None Remove="Views\ModUpdateAvailableWindow.xaml" />
 		<None Remove="Views\NotificationsPage.xaml" />
@@ -731,6 +732,9 @@
 	  <None Update="Assets\Games\Honkai\weapons.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	  <Page Update="Views\ModSelector.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	  <Page Update="Views\PresetDetailsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </Page>
