Updated git actions

--- a/.github/workflows/dotnet-desktop-self-contained.yml
+++ b/.github/workflows/dotnet-desktop-self-contained.yml
@@ -10,6 +10,11 @@ on:
       - v*
 jobs:
   build:
+    strategy:
+      matrix:
+        configuration: [Release]
+        platform: [x64]
+
     runs-on: windows-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
     steps:
