--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -18,6 +18,11 @@ on:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        configuration: [Release]
+        platform: [x64]
+
     runs-on: windows-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
     steps:
