--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -455,11 +455,13 @@
 		<Content Remove="Assets\Games\Honkai\Images\Characters\asta.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\bailu.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\blade.webp" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\boothill.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\bronya.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\clara.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\dangheng.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\DHIL.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\drratio.webp" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\firefly.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\fuxuan.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\gepard.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\guinafen.webp" />
@@ -468,6 +470,7 @@
 		<Content Remove="Assets\Games\Honkai\Images\Characters\himeko.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\hook.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\huohuo.png" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\jade.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\jingliu.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\jingyuan.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\kafka.webp" />
@@ -478,6 +481,7 @@
 		<Content Remove="Assets\Games\Honkai\Images\Characters\natasha.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\pela.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\qingque.webp" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\robin.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\ruanmei.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\sampo.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\seele.webp" />
